# du_quantum

./: .gitignore  README.md  pyproject.toml  skills-lock.json  wong.mplstyle
experiments/: eps_sweep.py  hardware_batch.py  hardware_pilot.py  learn_noise_miami.py  lightcone_sweep_noisy.py  noise_zne.py  noiseless_variance.py  resource_estimation.py  tem_pilot.py
experiments/classical_shadows/: noiseless_variance.py
experiments/direct_sample/: noiseless_variance.py
experiments/x_basis_shadow/: noiseless_variance.py
plotting/: plot_hardware_pilot.py  plot_tem_comparison.py
src/du/: __init__.py  circuit_layout.py  experiment_io.py  experiments.py  floquet.py  noise.py  plotting.py  shadows.py  simulation.py  utils.py
src/du/_tem/: __init__.py  tem.py  tem_julia.py  tem_mpo.py  tem_propagate.jl
tests/: test_aer_miami.py  test_classical_shadow.py  test_classical_shadow_lightcone.py  test_du_lightcone.py  test_simulation.py
utils/: check_tem_access.py  save_ibm_credentials.py
