[project]
name = "du-pertubation-quantum"
version = "0.1.0"
description = "Perturbed dual-unitary circuit simulation, noise modeling, and TEM/ZNE error mitigation."
requires-python = ">=3.13"
dependencies = [
    "juliacall>=0.9.34",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pylatexenc>=2.10",
    "qiskit>=2.4.1",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-catalog>=0.16.0",
    "qiskit-ibm-runtime>=0.47.0",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/du"]

[tool.hatch.build.targets.wheel.force-include]
"src/du/_tem/tem_propagate.jl" = "du/_tem/tem_propagate.jl"

[tool.pytest.ini_options]
testpaths = ["tests"]
